looprpc: add disqualified channels to suggest swaps response
